--- a/app/views/expenses/edit.html.erb
+++ b/app/views/expenses/edit.html.erb
@@ -1,6 +1,17 @@
-<h1>Editing Expense</h1>
 
-<%= render 'form', expense: @expense %>
+<div class="br-pagebody mg-b-30">
+  <div class="br-section-wrapper">
+    <div class="headers mg-b-20">
+        
+      <h2>Modification dépense</h2>
+      <hr />
+    </div>
 
-<%= link_to 'Show', @expense %> |
-<%= link_to 'Back', expenses_path %>
+    	<div id="exit-expense">
+      	<%= render 'form', expense: @expense %>
+
+      </div>
+
+	</div>
+  </div>
+  </div>
