--- a/app/views/contacts/show.html.erb
+++ b/app/views/contacts/show.html.erb
@@ -1,69 +1,44 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Uid:</strong>
-  <%= @contact.uid %>
-</p>
-
-<p>
-  <strong>Contact type:</strong>
-  <%= @contact.contact_type %>
-</p>
-
-<p>
-  <strong>First name:</strong>
-  <%= @contact.first_name %>
-</p>
-
-<p>
-  <strong>Last name:</strong>
-  <%= @contact.last_name %>
-</p>
-
-<p>
-  <strong>Civility:</strong>
-  <%= @contact.civility %>
+  <strong>Full name:</strong>
+  <%= @customer.full_name %>
 </p>
 
 <p>
   <strong>Address:</strong>
-  <%= @contact.address %>
-</p>
-
-<p>
-  <strong>Phone number 1:</strong>
-  <%= @contact.phone_number_1 %>
-</p>
-
-<p>
-  <strong>Phone number 2:</strong>
-  <%= @contact.phone_number_2 %>
+  <%= @customer.address %>
 </p>
 
 <p>
   <strong>City:</strong>
-  <%= @contact.city %>
+  <%= @customer.city %>
 </p>
 
 <p>
-  <strong>Contry:</strong>
-  <%= @contact.contry %>
+  <strong>Country:</strong>
+  <%= @customer.country %>
 </p>
 
 <p>
-  <strong>Email:</strong>
-  <%= @contact.email %>
+  <strong>Phone:</strong>
+  <%= @customer.phone %>
 </p>
 
 <p>
-  <strong>About:</strong>
-  <%= @contact.about %>
+  <strong>Slug:</strong>
+  <%= @customer.slug %>
 </p>
 
 <p>
   <strong>Status:</strong>
-  <%= @contact.status %>
+  <%= @customer.status %>
 </p>
 
-<%= link_to 'Edit', edit_contact_path(@contact) %> |
-<%= link_to 'Back', contacts_path %>
+<p>
+  <strong>User:</strong>
+  <%= @customer.user %>
+</p>
+
+<%= link_to 'Edit', edit_customer_path(@customer) %> |
+<%= link_to 'Back', customers_path %>
