--- a/app/views/dashboard/partials/subpartials/_stats.html.erb
+++ b/app/views/dashboard/partials/subpartials/_stats.html.erb
@@ -2,11 +2,11 @@
             <div class="bg-info rounded overflow-hidden">
               <div class="pd-x-20 pd-t-20 d-flex align-items-center">
                 
-                <i class="fa fa-cutlery tx-60 lh-0 tx-white op-7" aria-hidden="true"></i>
+                <i class="fa fa-money tx-60 lh-0 tx-white op-7" aria-hidden="true"></i>
                 <div class="mg-l-20">
-                  <p class="tx-10 tx-spacing-1 tx-mont tx-semibold tx-uppercase tx-white-8 mg-b-10">Nourritures</p>
+                  <p class="tx-10 tx-spacing-1 tx-mont tx-semibold tx-uppercase tx-white-8 mg-b-10">Revenus</p>
                   <p class="tx-24 tx-white tx-lato tx-bold mg-b-0 lh-1">
-                  <%= @total_foods %>
+                  <%= @total_incomes %>
                   </p>
                   <span class="tx-11 tx-roboto tx-white-8">
                   </span>
@@ -20,11 +20,11 @@
             <div class="bg-purple rounded overflow-hidden">
               <div class="pd-x-20 pd-t-20 d-flex align-items-center">
                
-                <i class="fa fa-users tx-60 lh-0 tx-white op-7" aria-hidden="true"></i>
+                <i class="fa fa-shopping-cart tx-60 lh-0 tx-white op-7" aria-hidden="true"></i>
                 <div class="mg-l-20">
-                  <p class="tx-10 tx-spacing-1 tx-mont tx-semibold tx-uppercase tx-white-8 mg-b-10">Clients</p>
+                  <p class="tx-10 tx-spacing-1 tx-mont tx-semibold tx-uppercase tx-white-8 mg-b-10">Dépenses</p>
                   <p class="tx-24 tx-white tx-lato tx-bold mg-b-0 lh-1">
-                      <%= @total_customers %>
+                      <%= @total_expenses %>
                   </p>
                   <span class="tx-11 tx-roboto tx-white-8">
                   </span>
@@ -37,11 +37,11 @@
           <div class="col-sm-3 col-xl-3 ">
             <div class="bg-teal rounded overflow-hidden">
               <div class="pd-x-20 pd-t-20 d-flex align-items-center">
-                <i class="fa fa-credit-card tx-60 lh-0 tx-white op-7" aria-hidden="true"></i>
+                <i class="fa fa-university tx-60 lh-0 tx-white op-7" aria-hidden="true"></i>
                 <div class="mg-l-20">
-                  <p class="tx-10 tx-spacing-1 tx-mont tx-semibold tx-uppercase tx-white-8 mg-b-10">Cartes</p>
+                  <p class="tx-10 tx-spacing-1 tx-mont tx-semibold tx-uppercase tx-white-8 mg-b-10">Epargnes</p>
                   <p class="tx-24 tx-white tx-lato tx-bold mg-b-0 lh-1">
-                    <%= @total_fidelity_cards %>
+                    <%= @total_savings %>
                   </p>
                   <span class="tx-11 tx-roboto tx-white-8">
                   
@@ -53,15 +53,15 @@
           </div><!-- col-3 -->
 
 
-<div class="col-sm-3 col-xl-3 ">
+          <div class="col-sm-3 col-xl-3 ">
             <div class="bg-info rounded overflow-hidden">
               <div class="pd-x-20 pd-t-20 d-flex align-items-center">
                 
-                <i class="fa fa-shopping-cart tx-60 lh-0 tx-white op-7" aria-hidden="true"></i>
+                <i class="fa fa-credit-card tx-60 lh-0 tx-white op-7" aria-hidden="true"></i>
                 <div class="mg-l-20">
-                  <p class="tx-10 tx-spacing-1 tx-mont tx-semibold tx-uppercase tx-white-8 mg-b-10">Commandes</p>
+                  <p class="tx-10 tx-spacing-1 tx-mont tx-semibold tx-uppercase tx-white-8 mg-b-10">Dettes</p>
                   <p class="tx-24 tx-white tx-lato tx-bold mg-b-0 lh-1">
-                  <%= @total_orders %>
+                  <%= @total_debts %>
                   </p>
                   <span class="tx-11 tx-roboto tx-white-8">
                   </span>
