--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -1,51 +1,46 @@
-<p id="notice"><%= notice %></p>
+<div class="br-pageheader mg-30">
+      <nav class="breadcrumb pd-0 mg-0 tx-12">
+        
+        <span class="breadcrumb-item active"><h5>Dépenses</h5></span>
+      </nav>
+    </div><!-- br-pageheader -->
 
-<h1>Expenses</h1>
+<div class="br-pagebody mg-b-30">
+  <div class="br-section-wrapper">
+    <div class="headers mg-b-20">
+        <div class="left-content">
+        </div>
 
-<table>
+        <div class="text-right">
+            <%= link_to raw('<i class="fa fa-plus" aria-hidden="true"></i> Ajouter'), new_expense_path, class: "btn btn-primary tx-mont tx-medium tx-11 tx-uppercase pd-y-12 pd-x-25 tx-spacing-1", remote: false %>
+
+        </div>
+
+    </div>
+
+
+<table id="datatable1" class="table display responsive nowrap">
+
+
+
   <thead>
     <tr>
-      <th>Uid</th>
-      <th>Expense category</th>
-      <th>Reason</th>
-      <th>Recipient</th>
-      <th>Document reference</th>
-      <th>Amount</th>
-      <th>Description</th>
-      <th>Wallet source</th>
-      <th>Wallet</th>
-      <th>Bank source</th>
-      <th>Bank</th>
-      <th>User</th>
-      <th>Status</th>
-      <th colspan="3"></th>
+      <th>Date</th>
+      <th>Réf</th>
+      <th>Catégorie</th>
+      <th>Désignation</th>
+      <th>Bénéficiaire</th>
+      <th>Réf. pièce</th>
+      <th>Montant</th>
+      <th>Statut</th>
+      <th>Actions</th>
     </tr>
   </thead>
 
-  <tbody>
-    <% @expenses.each do |expense| %>
-      <tr>
-        <td><%= expense.uid %></td>
-        <td><%= expense.expense_category %></td>
-        <td><%= expense.reason %></td>
-        <td><%= expense.recipient %></td>
-        <td><%= expense.document_reference %></td>
-        <td><%= expense.amount %></td>
-        <td><%= expense.description %></td>
-        <td><%= expense.wallet_source %></td>
-        <td><%= expense.wallet %></td>
-        <td><%= expense.bank_source %></td>
-        <td><%= expense.bank %></td>
-        <td><%= expense.user %></td>
-        <td><%= expense.status %></td>
-        <td><%= link_to 'Show', expense %></td>
-        <td><%= link_to 'Edit', edit_expense_path(expense) %></td>
-        <td><%= link_to 'Destroy', expense, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
+  <tbody class="expenses">
+    <%= render "index" %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Expense', new_expense_path %>
+</div>
+</div>
+<div id="expense-modal" class="c-modal modal fade" data-backdrop="static"></div>
