--- a/app/views/expenses/new.html.erb
+++ b/app/views/expenses/new.html.erb
@@ -1,5 +1,17 @@
-<h1>New Expense</h1>
 
-<%= render 'form', expense: @expense %>
+<div class="br-pagebody mg-b-30">
+  <div class="br-section-wrapper">
+    <div class="headers mg-b-20">
+        
+      <h2>Nouvelle dépense</h2>
+      <hr />
+    </div>
 
-<%= link_to 'Back', expenses_path %>
+    	<div id="new-expense">
+      	<%= render 'form', expense: @expense %>
+
+      </div>
+
+	</div>
+  </div>
+  </div>
