--- a/app/views/incomes/new.html.erb
+++ b/app/views/incomes/new.html.erb
@@ -1,5 +1,18 @@
-<h1>New Income</h1>
 
-<%= render 'form', income: @income %>
 
-<%= link_to 'Back', incomes_path %>
+<div class="br-pagebody mg-b-30">
+  <div class="br-section-wrapper">
+    <div class="headers mg-b-20">
+        
+      <h2>Nouveau revenu</h2>
+      <hr />
+    </div>
+
+    	<div id="new-income">
+      	<%= render 'form', income: @income %>
+
+      </div>
+
+	</div>
+  </div>
+  </div>
