--- a/app/views/expenses/_form.html.erb
+++ b/app/views/expenses/_form.html.erb
@@ -5,7 +5,7 @@
           <span aria-hidden="true">&times;</span>
         </button>
 
-        <h4><%= pluralize(expense.errors.count, "erreur") %> a empêchée l'enregistrement de cette commande:</h4>
+        <h4><%= pluralize(expense.errors.count, "erreur") %> a empêchée l'enregistrement de cette dépense:</h4>
 
       <ul>
       <% expense.errors.full_messages.each do |message| %>
