--- a/app/views/incomes/_form.html.erb
+++ b/app/views/incomes/_form.html.erb
@@ -1,7 +1,11 @@
 <%= form_with(model: income, local: true) do |form| %>
   <% if income.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(income.errors.count, "error") %> prohibited this income from being saved:</h2>
+    <div class="alert alert-danger" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+
+        <h4><%= pluralize(income.errors.count, "erreur") %> a empêchée l'enregistrement de ce revenu:</h4>
 
       <ul>
       <% income.errors.full_messages.each do |message| %>
@@ -11,62 +15,45 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :uid %>
-    <%= form.text_field :uid %>
+  <div class="row">
+    <div class="col-md-6">
+      <div class="form-group">
+        <%= form.label :income_date, "Date", class: "required" %>
+        <%= form.date_field :income_date, class: "form-control", required: true %>
+      </div>
+    </div>
+
+    <div class="col-md-6">
+      <div class="form-group">
+        <%= form.label :income_type_id, "Type", class: "required" %>
+        <%= form.collection_select(:income_type_id, @income_types, :id, :name, {prompt: "Sélectionner"}, class: "form-control ", style: "width: 100%", required: true) %> 
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12">
+      <div class="form-group">
+        <%= form.label :designation, "Désignation", class: "required" %>
+        <%= form.text_field :designation, class: "form-control", placeholder: "Désignation", required: true  %>
+      </div>
+
+      <div class="form-group">
+        <%= form.label :description, "Description" %>
+        <%= form.text_area :description, class: "form-control", placeholder: "Description" %>
+      </div>
+
+      <div class="form-group">
+        <%= form.label :amount, "Montant", class: "required" %>
+        <%= form.number_field :amount, class: "form-control", required: true %>
+      </div>
+    </div>
   </div>
 
-  <div class="field">
-    <%= form.label :income_type_id %>
-    <%= form.text_field :income_type_id %>
-  </div>
-
-  <div class="field">
-    <%= form.label :designation %>
-    <%= form.text_field :designation %>
-  </div>
-
-  <div class="field">
-    <%= form.label :description %>
-    <%= form.text_area :description %>
-  </div>
-
-  <div class="field">
-    <%= form.label :amount %>
-    <%= form.text_field :amount %>
-  </div>
-
-  <div class="field">
-    <%= form.label :wallet_destionation %>
-    <%= form.check_box :wallet_destionation %>
-  </div>
-
-  <div class="field">
-    <%= form.label :wallet_id %>
-    <%= form.text_field :wallet_id %>
-  </div>
-
-  <div class="field">
-    <%= form.label :bank_destination %>
-    <%= form.check_box :bank_destination %>
-  </div>
-
-  <div class="field">
-    <%= form.label :bank_id %>
-    <%= form.text_field :bank_id %>
-  </div>
-
-  <div class="field">
-    <%= form.label :status %>
-    <%= form.text_field :status %>
-  </div>
-
-  <div class="field">
-    <%= form.label :user_id %>
-    <%= form.text_field :user_id %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
+  <div class="row">
+    <div class="col-md-12">
+      <div class="form-group pull-right">
+        <%= form.submit  class: "btn btn-primary tx-mont tx-medium tx-11 tx-uppercase pd-y-12 pd-x-25 tx-spacing-1" %>
+      </div>
+    </div>
   </div>
 <% end %>
