--- a/app/views/incomes/index.html.erb
+++ b/app/views/incomes/index.html.erb
@@ -1,47 +1,43 @@
-<p id="notice"><%= notice %></p>
+<div class="br-pageheader mg-30">
+      <nav class="breadcrumb pd-0 mg-0 tx-12">
+        
+        <span class="breadcrumb-item active"><h5>Révenus</h5></span>
+      </nav>
+    </div><!-- br-pageheader -->
 
-<h1>Incomes</h1>
+<div class="br-pagebody mg-b-30">
+  <div class="br-section-wrapper">
+    <div class="headers mg-b-20">
+        <div class="left-content">
+        </div>
 
-<table>
+        <div class="text-right">
+            <%= link_to raw('<i class="fa fa-plus" aria-hidden="true"></i> Ajouter'), new_income_path, class: "btn btn-primary tx-mont tx-medium tx-11 tx-uppercase pd-y-12 pd-x-25 tx-spacing-1", remote: false %>
+
+        </div>
+
+    </div>
+
+
+<table id="datatable1" class="table display responsive nowrap">
+
+
   <thead>
     <tr>
-      <th>Uid</th>
-      <th>Income type</th>
-      <th>Designation</th>
-      <th>Description</th>
-      <th>Amount</th>
-      <th>Wallet destionation</th>
-      <th>Wallet</th>
-      <th>Bank destination</th>
-      <th>Bank</th>
-      <th>Status</th>
-      <th>User</th>
-      <th colspan="3"></th>
+      <th>Date</th>
+      <th>UID</th>
+      <th>Type</th>
+      <th>Désignation</th>
+      <th>Montant</th>
+      <th>Statut</th>
+      <th>Actions</th>
     </tr>
   </thead>
 
-  <tbody>
-    <% @incomes.each do |income| %>
-      <tr>
-        <td><%= income.uid %></td>
-        <td><%= income.income_type %></td>
-        <td><%= income.designation %></td>
-        <td><%= income.description %></td>
-        <td><%= income.amount %></td>
-        <td><%= income.wallet_destionation %></td>
-        <td><%= income.wallet %></td>
-        <td><%= income.bank_destination %></td>
-        <td><%= income.bank %></td>
-        <td><%= income.status %></td>
-        <td><%= income.user %></td>
-        <td><%= link_to 'Show', income %></td>
-        <td><%= link_to 'Edit', edit_income_path(income) %></td>
-        <td><%= link_to 'Destroy', income, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
+  <tbody class="incomes">
+    <%= render "index" %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Income', new_income_path %>
+</div>
+</div>
+<div id="income-modal" class="c-modal modal fade" data-backdrop="static"></div>
