--- a/app/views/debts/edit.html.erb
+++ b/app/views/debts/edit.html.erb
@@ -1,6 +1,17 @@
-<h1>Editing Debt</h1>
 
-<%= render 'form', debt: @debt %>
+<div class="br-pagebody mg-b-30">
+  <div class="br-section-wrapper">
+    <div class="headers mg-b-20">
+        
+      <h2>Modifier dette</h2>
+      <hr />
+    </div>
 
-<%= link_to 'Show', @debt %> |
-<%= link_to 'Back', debts_path %>
+    	<div id="edit-debt">
+      	<%= render 'form', debt: @debt %>
+
+      </div>
+
+	</div>
+  </div>
+  </div>
