--- a/app/views/debts/new.html.erb
+++ b/app/views/debts/new.html.erb
@@ -1,5 +1,17 @@
-<h1>New Debt</h1>
 
-<%= render 'form', debt: @debt %>
+<div class="br-pagebody mg-b-30">
+  <div class="br-section-wrapper">
+    <div class="headers mg-b-20">
+        
+      <h2>Nouvelle dette</h2>
+      <hr />
+    </div>
 
-<%= link_to 'Back', debts_path %>
+    	<div id="new-debt">
+      	<%= render 'form', debt: @debt %>
+
+      </div>
+
+	</div>
+  </div>
+  </div>
