--- a/app/views/banks/_index.html.erb
+++ b/app/views/banks/_index.html.erb
@@ -1,6 +1,6 @@
 <% @banks.each do |bank| %>
   <tr>
-    
+    <td><%= bank.account_type %></td>
     <td><%= bank.name %></td>
     <td><%= bank.account_number %></td>
     <td><%= bank.balance %></td>
