--- a/app/views/savings/edit.html.erb
+++ b/app/views/savings/edit.html.erb
@@ -1,6 +1,17 @@
-<h1>Editing Saving</h1>
 
-<%= render 'form', saving: @saving %>
+<div class="br-pagebody mg-b-30">
+  <div class="br-section-wrapper">
+    <div class="headers mg-b-20">
+        
+      <h2>Modification Epargne</h2>
+      <hr />
+    </div>
 
-<%= link_to 'Show', @saving %> |
-<%= link_to 'Back', savings_path %>
+    	<div id="edit-saving">
+      	<%= render 'form', saving: @saving %>
+
+      </div>
+
+	</div>
+  </div>
+  </div>
