--- a/app/views/savings/new.html.erb
+++ b/app/views/savings/new.html.erb
@@ -1,5 +1,18 @@
-<h1>New Saving</h1>
 
-<%= render 'form', saving: @saving %>
 
-<%= link_to 'Back', savings_path %>
+<div class="br-pagebody mg-b-30">
+  <div class="br-section-wrapper">
+    <div class="headers mg-b-20">
+        
+      <h2>Nouvel Epargne</h2>
+      <hr />
+    </div>
+
+    	<div id="new-saving">
+      	<%= render 'form', saving: @saving %>
+
+      </div>
+
+	</div>
+  </div>
+  </div>
