--- a/app/views/banks/_form.html.erb
+++ b/app/views/banks/_form.html.erb
@@ -4,25 +4,33 @@
     </ul>
 
     <div class="row">
-      <div class="col-md-12">
+      <div class="col-md-6">
+        <div class="form-group">
+          <%= form.label :account_type, "Type compte", class: "required" %>
+          <%= form.select :account_type, BANK_ACCOUNT_TYPES, {prompt: "Sélectionner"}, class: "form-control", placeholder: "Nom", required: true %>
+        </div>
+      </div>
+
+      <div class="col-md-6">
         <div class="form-group">
           <%= form.label :name, "Nom", class: "required" %>
           <%= form.text_field :name, class: "form-control", placeholder: "Nom", required: true %>
         </div>
+      </div>
+    </div>
 
+    <div class="row">
+      <div class="col-md-6">
         <div class="form-group">
           <%= form.label :account_number, "N°Compte", class: "required" %>
           <%= form.text_field :account_number, class: "form-control", placeholder: "N°Compte", required: true %>
         </div>
+      </div>
 
+      <div class="col-md-6">
         <div class="form-group">
           <%= form.label :balance, "Solde" %>
           <%= form.number_field :balance, class: "form-control" %>
-        </div>
-
-        <div class="form-group">
-          <%= form.label :description %>
-          <%= form.text_area :description, class: "form-control", placeholder: "Description" %>
         </div>
       </div>
     </div>
