--- a/app/views/custom_users/index.html.erb
+++ b/app/views/custom_users/index.html.erb
@@ -11,7 +11,7 @@
         </div>
 
         <div class="text-right">
-            <%= link_to raw('<i class="fa fa-plus" aria-hidden="true"></i> Nouvel utilisateur'), new_account_path, class: "btn btn-primary tx-mont tx-medium tx-11 tx-uppercase pd-y-12 pd-x-25 tx-spacing-1", remote: true %>
+            <%= link_to raw('<i class="fa fa-plus" aria-hidden="true"></i> Nouvel utilisateur'), new_user_path, class: "btn btn-primary tx-mont tx-medium tx-11 tx-uppercase pd-y-12 pd-x-25 tx-spacing-1", remote: true %>
 
         </div>
 
